--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,7 +1,8 @@
 @import "../shared/helper";
 
-.x {
-  width: px(367);
-  height: px(316);
-  border: 1px solid red;
+.home {
+  header{
+    height: px(99);
+    background-size: cover;
+  }
 }
