--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,8 +1,38 @@
 @import "../shared/helper";
 
 .home {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   header{
     height: px(99);
     background-size: cover;
+  }
+  > main {
+    flex: 1;
+    display: grid;
+    grid-template:
+      "box1 box2 box4 box5" 756fr
+      "box3 box3 box4 box5" 363fr / 367fr 360fr 813fr 749fr;
+    > .section1 {
+      grid-area: box1;
+      background: pink;
+    }
+    > .section2 {
+      grid-area: box2;
+      background: lightgray;
+    }
+    > .section3 {
+      grid-area: box3;
+      background: lightblue;
+    }
+    > .section4 {
+      grid-area: box4;
+      background: lightcyan;
+    }
+    > .section5 {
+      grid-area: box5;
+      background: lightyellow;
+    }
   }
 }
