--- a/src/shared/style.scss
+++ b/src/shared/style.scss
@@ -37,4 +37,11 @@ body {
 #root {
   margin: 0 auto;
   background: lightgreen;
+  display: flex;
+  flex-direction: column;
+}
+.App{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
 }
