--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -4,11 +4,16 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  header{
+  background: #010310;
+  color: white;
+
+  header {
     height: px(99);
     background-size: cover;
   }
+
   > main {
+    padding-top: px(30);
     flex: 1;
     display: grid;
     grid-template:
@@ -16,25 +21,73 @@
       "box3 box3 box4 box5" 363fr / 367fr 360fr 813fr 749fr;
     grid-column-gap: px(28);
     grid-row-gap: px(28);
+    > section {
+      text-align: center;
+    }
+    .bordered {
+      border: 1px solid #0764bc;
+      border-radius: 4px;
+      position: relative;
+      box-shadow: 0 0 2px 0 #0f3361, inset 0 0 2px 0 #0f3361;
+      background: #0c1139;
+      &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+        border-radius: 4px;
+        box-shadow:
+        17px 0 0 -16px #0f3361,
+        -17px 0 0 -16px #0f3361,
+        0 17px 0 -16px #0f3361,
+        0 -17px 0 -16px #0f3361,
+        9px 0 0 -8px #0d4483,
+        -9px 0 0 -8px #0d4483,
+        0 9px 0 -8px #0d4483,
+        0 -9px 0 -8px #0d4483,
+      }
+    }
+
     > .section1 {
       grid-area: box1;
-      background: pink;
     }
+
     > .section2 {
       grid-area: box2;
-      background: lightgray;
     }
+
     > .section3 {
       grid-area: box3;
-      background: lightblue;
     }
+
     > .section4 {
       grid-area: box4;
-      background: lightcyan;
     }
+
     > .section5 {
       grid-area: box5;
-      background: lightyellow;
+    }
+    .管辖统计{
+      height: px(316);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      h2{
+        flex-shrink: 0;
+        border: 1px solid #0a5299;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        font-size: px(22);
+        line-height: px(24);
+        padding: px(10) px(28);
+        text-shadow: 0 0 px(3) white;
+      }
+      .chart {
+        flex: 1;
+        width: 100%;
+      }
     }
   }
 }
