--- a/src/shared/style.scss
+++ b/src/shared/style.scss
@@ -32,11 +32,11 @@ code {
 body {
   font-family: $font-hei;
   font-size: 16px;
+  background: #00020b;
 }
 
 #root {
   margin: 0 auto;
-  background: lightgreen;
   display: flex;
   flex-direction: column;
 }
@@ -44,4 +44,7 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1;
+}
+h1,h2,h3,h4,h5,h6 {
+  font-size: 16px;
 }
