--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   background: #010310;
   color: white;
+  font-size: px(16);
 
   header {
     height: px(99);
@@ -21,15 +22,18 @@
       "box3 box3 box4 box5" 363fr / 367fr 360fr 813fr 749fr;
     grid-column-gap: px(28);
     grid-row-gap: px(28);
+
     > section {
       text-align: center;
     }
+
     .bordered {
       border: 1px solid #0764bc;
       border-radius: 4px;
       position: relative;
       box-shadow: 0 0 2px 0 #0f3361, inset 0 0 2px 0 #0f3361;
       background: #0c1139;
+
       &::before {
         content: '';
         position: absolute;
@@ -38,8 +42,7 @@
         bottom: 0;
         top: 0;
         border-radius: 4px;
-        box-shadow:
-        17px 0 0 -16px #0f3361,
+        box-shadow: 17px 0 0 -16px #0f3361,
         -17px 0 0 -16px #0f3361,
         0 17px 0 -16px #0f3361,
         0 -17px 0 -16px #0f3361,
@@ -52,6 +55,9 @@
 
     > .section1 {
       grid-area: box1;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     > .section2 {
@@ -69,12 +75,14 @@
     > .section5 {
       grid-area: box5;
     }
-    .管辖统计{
+
+    .管辖统计 {
       height: px(316);
       display: flex;
       flex-direction: column;
       align-items: center;
-      h2{
+
+      h2 {
         flex-shrink: 0;
         border: 1px solid #0a5299;
         border-bottom-left-radius: 4px;
@@ -84,9 +92,57 @@
         padding: px(10) px(28);
         text-shadow: 0 0 px(3) white;
       }
+
       .chart {
         flex: 1;
         width: 100%;
+      }
+    }
+
+    .破获排名 {
+      height: px(423);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h2 {
+        flex-shrink: 0;
+        border: 1px solid #0a5299;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        font-size: px(22);
+        line-height: px(24);
+        padding: px(10) px(28);
+        text-shadow: 0 0 px(3) white;
+      }
+
+      .chart {
+        flex: 1;
+        width: 100%;
+      }
+
+      .legend {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        width: 100%;
+        padding: 0 px(20) px(10);
+
+        > .first, > .second {
+          display: inline-block;
+          width: px(18);
+          height: px(12);
+          background: red;
+          margin: 0 px(10);
+        }
+
+        .first {
+          background:  linear-gradient(90deg, #2034f9 0%, #04a1ff 100%);;
+        }
+
+        .second {
+          background:  linear-gradient(90deg, #b92ae8 0%, #6773e7 100%);;
+        }
       }
     }
   }
