--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -90,7 +90,7 @@
       grid-area: box5;
     }
 
-    .管辖统计,.破获排名, {
+    .管辖统计,.破获排名,.发案趋势 {
       height: px(316);
       display: flex;
       flex-direction: column;
