--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -46,7 +46,7 @@
       border-radius: 4px;
       position: relative;
       box-shadow: 0 0 2px 0 #0f3361, inset 0 0 2px 0 #0f3361;
-      background: #0c1139;
+      background: #0f113a;
 
       &::before {
         content: '';
@@ -76,6 +76,9 @@
 
     > .section2 {
       grid-area: box2;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
 
     > .section3 {
@@ -90,7 +93,7 @@
       grid-area: box5;
     }
 
-    .管辖统计,.破获排名,.发案趋势 {
+    .管辖统计,.破获排名,.发案趋势,.案发时段,.战果 {
       height: px(316);
       display: flex;
       flex-direction: column;
@@ -110,6 +113,30 @@
       .chart {
         flex: 1;
         width: 100%;
+      }
+    }
+    .发案趋势,.案发时段 {
+      height: px(363);
+    }
+    .战果 {
+      > table {
+        margin-top: px(38);
+        border-collapse: collapse;
+        th, td {
+          border: 1px solid #1a3671;
+        }
+        thead {
+          th {
+            height: px(70);
+            box-shadow: inset 0 0 px(60) 0 #1f3d85;
+          }
+        }
+        tbody {
+          td {height: px(50); width: px(84);
+            background: #1c2456;
+          }
+
+        }
       }
     }
 
