--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -95,9 +95,21 @@
 
     > .section5 {
       grid-area: box5;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      > .row1 {
+        height: px(317);
+      }
+      > .row2 {
+        height: px(317);
+      }
+      > .row3 {
+        height: px(455);
+      }
     }
 
-    .管辖统计, .破获排名, .发案趋势, .案发时段, .战果, .籍贯, .年龄段 {
+    .管辖统计, .破获排名, .发案趋势, .案发时段, .战果, .籍贯, .年龄段, .案发类型, .案发街道, .作案手段 {
       height: px(316);
       display: flex;
       flex-direction: column;
@@ -114,9 +126,14 @@
         text-shadow: 0 0 px(3) white;
       }
 
-      .chart {
-        flex: 1;
+      .charts {
         width: 100%;
+        flex: 1;
+        display: flex;
+      }
+      .chart {
+        flex:1;
+        width:100%;
       }
     }
 
@@ -130,9 +147,6 @@
       height: px(363);
 
       > .charts {
-        width: 100%;
-        flex: 1;
-        display: flex;
         padding: px(30);
       }
 
